--- a/src/style.css
+++ b/src/style.css
@@ -55,6 +55,10 @@ form {
   box-shadow: 0px 4px 30px 00px rgba(39, 33, 66, 0.03);
 }
 
+.poem em {
+  color: #885df1;
+}
+
 footer {
   text-align: center;
   font-size: 13px;
