--- a/src/style.css
+++ b/src/style.css
@@ -18,13 +18,23 @@ h1 {
   text-align: center;
 }
 
-form {
-  padding: 30px;
+.form-container {
   background-color: white;
-  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
-  border-radius: 10px;
-  display: flex;
   margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  padding: 15px 20px;
+}
+
+form {
+  display: flex;
+}
+
+.hint {
+  line-height: 1.5;
+  margin-top: 5px;
+  opacity: 0.6;
+  font-size: 12px;
 }
 .instructions {
   padding: 16px;
@@ -55,6 +65,10 @@ form {
   box-shadow: 0px 4px 30px 00px rgba(39, 33, 66, 0.03);
 }
 
+.hidden {
+  display: none;
+}
+
 .poem em {
   color: #885df1;
 }
@@ -67,4 +81,18 @@ footer {
 
 a {
   color: #885df1;
+}
+
+.generating-blink {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
